--- a/Battleship/BlazorApp/wwwroot/index.html
+++ b/Battleship/BlazorApp/wwwroot/index.html
@@ -10,6 +10,11 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/tetris.css" rel="stylesheet" />
     <link href="css/battleship.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.3.2/browser/pixi.js"></script>
+    <!-- 
+    min version
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script> 
+    -->
     <!-- WTF where does this style come from -->
     <link href="BlazorApp.styles.css" rel="stylesheet" />
     <script src="js/utilities.js"></script>
