--- a/Battleship/BlazorApp/wwwroot/index.html
+++ b/Battleship/BlazorApp/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link href="css/tetris.css" rel="stylesheet" />
     <link href="css/battleship.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.3.2/browser/pixi.js"></script>
+    <link href="manifest.json" rel="manifest" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <!-- 
     min version
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script> 
@@ -29,6 +31,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
 </html>
