[feature] add git hash to index.html on Github build

--- a/Battleship/BlazorApp/wwwroot/index-template.html
+++ b/Battleship/BlazorApp/wwwroot/index-template.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div id="app">Loading... 19e6837 </div>
+    <div id="app">Loading... <%= commit-hash %></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
